gap added, desctop view fixed

--- a/docs/index.css
+++ b/docs/index.css
@@ -15,18 +15,23 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
+    gap: 5px;
 
     background-color: #260F64;
 }
 
 .card {
-    max-width: 724px;
     display: flex;
     justify-content: center;
 }
 
 .image {
-    width: 100%;
+    max-height: 100vh;
+    max-width: 100vw;
     object-fit: contain;
 }
+/* .image:hover {
+    transform: scale(1.1);
+} */
